--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             Enter the bill amount and cash given by the customer and know minimum number of notes to return.
         </p>
         <label for="bill-amount"> ENTER THE BILL AMOUNT :</label>
-        <input id="bill-amount" type="text">
+        <input id="bill-amount" type="text" />
 
         <label for="cash-given">ENTER THE AMOUNT GIVEN :</label>
         <input id="cash-given" type="text" />
