just styled it !

--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
 
     <title>
         Cash-Register </title>
-    
 </head>
 
 <body>
-    
+
     <div class="container">
         <h1 class="heading">Cash Register Manager</h1>
         <p class="description">
@@ -29,8 +28,8 @@
         <p id="error-message"></p>
 
 
-        <table class="change-table">
-            <caption> CHANGE TO BE RETURNED</caption>
+        <table class="table-change">
+            <caption> CHANGE TO RETURN</caption>
             <tr>
                 <th>No. of Notes
                 </th>
@@ -54,7 +53,7 @@
             </tr>
         </table>
     </div>
-</body>
     <script src="./index.js"></script>
+</body>
 
 </html>
